k8s/media-services/watcharr/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: watcharr
  namespace: media-services
  labels:
    app: watcharr
spec:
  type: ClusterIP
  ports:
  - name: http
    port: 80
    targetPort: http
    protocol: TCP
  selector:
    app: watcharr
